fix customize panel alignment

--- a/app/styles/customize.less
+++ b/app/styles/customize.less
@@ -1,11 +1,10 @@
 #customize {
-	font-size: 12px;
 	position: fixed;
 	padding: 14px;
 	background-color:#FFF;
 	border-radius:6px;
 	width: 360px;
-	right: 15px;
+	right: 10px;
 	bottom: 0px;
 	opacity: 0;
 	z-index: 100;
@@ -16,7 +15,7 @@
 	transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 
 	&.open {
-		bottom: 70px;
+		bottom: 60px;
 		opacity: 1;
 		visibility: visible;
 	}
